// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Form Component 1`] = `
.c0 {
  width: 100%;
  padding: 4px 0.8em;
  font-size: 20px;
  line-height: 2em;
  border: none;
}

<input
  className="c0"
  onChange={[Function]}
  value=""
/>
`;

exports[`Form Component 2`] = `
.c0 {
  width: 100%;
  padding: 4px 0.8em;
  font-size: 20px;
  line-height: 2em;
  border: none;
}

<input
  className="c0"
  onChange={[Function]}
  placeholder="placeholder"
  value="test form"
/>
`;
